# flowdrop-android

./: .gitignore  .gitmodules  LEGAL  LICENSE  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/me/nelonn/flowdrop/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  core.cpp  core.h  dnssd.cpp  eventlistener.cpp  eventlistener.h  java.cpp  java.h  java_internal.h  main.cpp  main.h  server.cpp
app/src/main/cpp/jni_lib/: java_core.cpp  java_core.h  java_core_internal.h  jni_core.cpp  jni_core.h
app/src/main/cpp/mdnsresponder/: CMakeLists.txt
app/src/main/cpp/mdnsresponder/mdnsresponder/mDNSPosix/: mdnsd.sh
app/src/main/cpp/mdnsresponder/mdnsresponder/mDNSShared/: PlatformCommon.c
app/src/main/java/me/nelonn/flowdrop/: AppController.java  BatteryOptimizationMode.java  InstructionsActivity.java  MainActivity.java  Preferences.java  SettingsActivity.java  ShareActivity.java  Util.java
app/src/main/java/me/nelonn/flowdrop/app/: AtomicBooleanCallback.java  BatteryOptimizationMode.java  Constants.java  NotificationChannel.kt  Preferences.java  Receiver.java  ServerListener.java  ToggleTileService.java  Util.java
app/src/main/java/me/nelonn/flowdrop/background/: BackgroundSendingService.java  BackgroundServerService.java  ReceiverRestartReceiver.java
app/src/main/java/me/nelonn/flowdrop/jimpl/: AndroidDeviceInfo.java  AndroidFile.java  DNSSDFactory.java  DrukDNSSD.java  NsdDNSSD.java
app/src/main/java/me/nelonn/flowdrop/ui/: AppController.java  InstructionsActivity.java  MainActivity.java  Receiver.java  ReceiversAdapter.java  SelectDevicesFragment.java  SettingsActivity.java  ShareActivity.java
app/src/main/java/me/nelonn/jflowdrop/: DNSSD.java  DeviceInfo.java  DiscoverCallback.java  EventListener.java  File.java  FileInfo.java  IsStoppedFunction.java  JFlowDrop.java  SendAsk.java  SendAskCallback.java  SendRequest.java  Server.java
app/src/main/java/me/nelonn/jflowdrop/impl/: NativeDiscoverCallback.java  NativeIsStoppedFunc.java  NativeJFlowDrop.java  NativeQueryCallback.java  NativeResolveCallback.java  (+3 more)
app/src/main/res/drawable/: battery_mode_background.xml  circle_shape.xml  flowdrop.xml  ic_launcher_foreground.xml  ic_notification_icon.xml  loading.xml  oneui_rounded_corner_background.xml  round_arrow_back_24.xml  round_coffee_24.xml  round_laptop_24.xml  round_laptop_mac_24.xml  round_navigate_next_24.xml  round_phone_android_24.xml  round_phone_iphone_24.xml  round_send_24.xml  round_settings_24.xml
app/src/main/res/layout/: activity_instructions.xml  activity_main.xml  fragment_select_devices_sheet.xml  item_receiver.xml  settings_activity.xml
app/src/main/res/layout-v28/: fragment_select_devices_sheet.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-ru-rRU/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-w600dp/: dimens.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/me/nelonn/flowdrop/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
knotandroidinfo/: build.gradle
knotandroidinfo/src/androidTest/java/me/nelonn/knotandroidinfo/: ExampleInstrumentedTest.java
knotandroidinfo/src/main/: AndroidManifest.xml
knotandroidinfo/src/main/assets/: supported_devices_2023-07-20T19-23-31Z.csv
knotandroidinfo/src/main/java/me/nelonn/knotandroidinfo/: DeviceModelInfo.java  DeviceModelInfoProvider.java  LineReader.java  Util.java
knotandroidinfo/src/test/java/me/nelonn/knotandroidinfo/: ExampleUnitTest.java
(+20 files in other folders)
